# Asteroids

./: .gitignore  Asteroid.h  CMakeLists.txt  Config.cpp  GameConstants.h  MovableEntity.h  README.md  main.cpp  run.sh
.github/workflows/: build-macos.yml
alien/: Alien.cpp  Alien.h
logic/: logic.cpp  logic.h
scenes/: Scenes.cpp  Scenes.h
spaceship/: Spaceship.cpp  Spaceship.h
